# yolov5-opencv-cpp-python

./: CMakeLists.txt
cpp/inc/: Detector.h  Tracker.h
cpp/src/: Detector.cpp  Tracker.cpp
